--- a/style.css
+++ b/style.css
@@ -1,7 +1,13 @@
 * {
-	border: 0;
+	margin: 0;
 	padding: 0;
 	font-family: system-ui;
+}
+
+.main-content {
+	display: inline-block;
+	width: 70%;
+	padding: 12px;
 }
 
 .library {
@@ -33,11 +39,39 @@
 .btn-delete {
 	align-self: flex-end;
 	margin-top: auto;
+	width: 100px;
+}
 
+button {
 	border: 0;
 	border-radius: 12px;
-
-	width: 100px;
+	padding: 0 12px;
 	height: 2rem;
 	line-height: 2rem;
+}
+
+button:hover {
+	cursor: pointer;
+}
+
+.sidebar {
+	position: fixed;
+	display: inline-block;
+	border-left: 3px solid black;
+	height: 100vh;
+	width: 30%;
+	padding: 12px;
+}
+
+form > div {
+	margin-bottom: 24px;
+}
+
+.btn-display-book-list {
+	background-color: #2d7ba0;
+	color: white;
+}
+
+.book-list {
+	margin-top: 24px;
 }
