--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 * {
+	--color-primary: #2d7ba0;
 	margin: 0;
 	padding: 0;
 	font-family: system-ui;
@@ -64,14 +65,24 @@ button:hover {
 }
 
 form > div {
-	margin-bottom: 24px;
+	margin-top: 12px;
 }
 
-.btn-display-book-list {
-	background-color: #2d7ba0;
+.btn-display-book-list,
+.btn-add {
+	background-color: var(--color-primary);
 	color: white;
 }
 
 .book-list {
 	margin-top: 24px;
+}
+
+label {
+	display: inline-block;
+	min-width: 80px;
+}
+
+li {
+	margin-left: 16px;
 }
